--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-// ===== ユーザー名（localStorage保持）=====
-let CURRENT_USER = localStorage.getItem("toolcheck_user");
-
-if (!CURRENT_USER) {
-  CURRENT_USER = prompt("名前を入力してください");
-  if (CURRENT_USER) {
-    localStorage.setItem("toolcheck_user", CURRENT_USER);
-  } else {
-    CURRENT_USER = "未入力";
-  }
-}
 <!doctype html>
 <html lang="ja">
 <head>
@@ -22,7 +11,6 @@ main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
 .badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
-.row{display:flex;gap:10px;flex-wrap:wrap}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
 .toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
@@ -48,7 +36,16 @@ const TOOL_NAME={
   T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
   T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
 };
+// 残すが使わない（互換用）
 const MEMBERS=["佐藤","山田","高橋"];
+
+/* ===== 利用者名（自由入力・端末保存）===== */
+let CURRENT_USER = localStorage.getItem("toolcheck_user");
+if(!CURRENT_USER){
+  const v = prompt("名前を入力してください");
+  CURRENT_USER = (v && v.trim()) ? v.trim() : "未入力";
+  localStorage.setItem("toolcheck_user", CURRENT_USER);
+}
 
 /* ===== URL ===== */
 const p=new URLSearchParams(location.search);
@@ -67,11 +64,7 @@ function toast(a,b="",ms=2200){
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),ms);
 }
-function vibrate(ms){
-  try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){}
-}
-function getUser(){return localStorage.getItem("user")||"";}
-function setUser(n){localStorage.setItem("user",n);}
+function vibrate(ms){ try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){} }
 
 /* ===== status: JSONP ===== */
 function jsonp_(url, timeoutMs=8000){
@@ -79,16 +72,13 @@ function jsonp_(url, timeoutMs=8000){
     const cb="cb_"+Math.random().toString(36).slice(2);
     const s=document.createElement("script");
     const t=setTimeout(()=>{ cleanup(); reject(new Error("timeout")); }, timeoutMs);
-
     function cleanup(){
       clearTimeout(t);
       try{ delete window[cb]; }catch(_){ window[cb]=undefined; }
       if (s.parentNode) s.parentNode.removeChild(s);
     }
-
     window[cb]=(data)=>{ cleanup(); resolve(data); };
     s.onerror=()=>{ cleanup(); reject(new Error("load error")); };
-
     s.src = url + (url.includes("?") ? "&" : "?") + "callback=" + encodeURIComponent(cb) + "&t=" + Date.now();
     document.body.appendChild(s);
   });
@@ -101,7 +91,7 @@ async function getStatus(){
   return js.items || [];
 }
 
-/* ===== 記録: hidden form POST（写真含む） ===== */
+/* ===== 記録: hidden form POST ===== */
 let postFrameInited=false;
 function ensurePostFrame_(){
   if(postFrameInited) return;
@@ -111,61 +101,36 @@ function ensurePostFrame_(){
   document.body.appendChild(ifr);
   postFrameInited=true;
 }
-
 function formPost_(payload){
   ensurePostFrame_();
-
   const f=document.createElement("form");
-  f.method="POST";
-  f.action=GAS_URL;
-  f.target="postFrame";
-  f.style.display="none";
-
+  f.method="POST"; f.action=GAS_URL; f.target="postFrame"; f.style.display="none";
   for(const k of Object.keys(payload)){
-    const inp=document.createElement("input");
-    inp.type="hidden";
-    inp.name=k;
-    inp.value=String(payload[k]);
-    f.appendChild(inp);
+    const i=document.createElement("input");
+    i.type="hidden"; i.name=k; i.value=String(payload[k]);
+    f.appendChild(i);
   }
-
   document.body.appendChild(f);
-  f.submit();
-  f.remove();
-
-  // レスポンスは読まない。送ったらOK扱い→statusで反映確認
+  f.submit(); f.remove();
   return true;
 }
-
 async function postAction_(action, photoDataUrl=""){
   const payload={
     datetime:new Date().toISOString(),
     site, tool, toolName,
     action,
-    user:getUser()
+    user: CURRENT_USER
   };
   if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
-
   formPost_(payload);
-
-  // 送信直後に即反映させるため少し待ってから status
   await new Promise(r=>setTimeout(r,500));
 }
 
-/* ===== カメラ（返却は写真必須） ===== */
+/* ===== カメラ ===== */
 let stream=null;
 
-function showUserSelect(){
-  app.innerHTML=`
-    <div class="card">
-      <h2>この端末の名前<span class="badge">最初の1回だけ</span></h2>
-      ${MEMBERS.map(n=>`<button onclick="pick('${n}')">${n}</button>`).join("")}
-    </div>`;
-}
-window.pick=n=>{setUser(n);render();};
-
 function header(){
-  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${getUser()||"未設定"}`;
+  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${CURRENT_USER}`;
 }
 
 function ui(statusItems){
@@ -205,7 +170,7 @@ function ui(statusItems){
     </div>
 
     <div class="card">
-      <h2>現場の一覧</h2>
+      <h2>履歴一覧</h2>
       ${renderList(statusItems)}
     </div>
   `;
@@ -214,7 +179,7 @@ function ui(statusItems){
 function renderList(items){
   const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
   if(active.length===0){
-    return `<div class="item"><b>持ち出し無し</b><div class="meta">持ち出し中／返却確認待ちはありません</div></div>`;
+    return `<div class="item"><b>持ち出し無し</b><div class="meta">現在の持ち出しはありません</div></div>`;
   }
   return `<div class="list">` + active.map(x=>{
     const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
@@ -223,7 +188,6 @@ function renderList(items){
       <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
         <b>${x.toolName}（${x.tool}）</b>
         <div class="meta">${label} / ${x.by||""} / ${t}</div>
-        ${x.photoUrl ? `<button class="small" onclick="openPhoto('${x.photoUrl.replace(/'/g,"%27")}')">写真</button>` : ``}
       </div>
     `;
   }).join("") + `</div>`;
@@ -232,28 +196,22 @@ function renderList(items){
 window.openPhoto=(u)=>{ window.open(u, "_blank"); };
 
 window.take=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
   try{
     await postAction_("持ち出し");
     vibrate(80);
     toast("持ち出しを記録","");
     await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
+  }catch(e){ toast("通信エラー",""); }
 };
 
 window.startReturn=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
   try{
     const cam=document.getElementById("cam");
     cam.classList.remove("hidden");
     const v=document.getElementById("v");
     stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
     v.srcObject = stream;
-  }catch(e){
-    toast("カメラ起動できない","許可/HTTPS/設定を確認");
-  }
+  }catch(e){ toast("カメラ起動できない",""); }
 };
 
 window.cancelCam=()=>{
@@ -264,19 +222,12 @@ window.cancelCam=()=>{
 
 async function captureJpegDataUrl_(){
   const v=document.getElementById("v");
-  if(!v) throw new Error("video not found");
   await new Promise(r=>setTimeout(r,150));
-
-  // 超低画質：縮小＋低品質
   const srcW=v.videoWidth||1280, srcH=v.videoHeight||720;
-  const outW=640;
-  const outH=Math.round(outW * srcH / srcW);
-
+  const outW=640, outH=Math.round(outW * srcH / srcW);
   const c=document.createElement("canvas");
   c.width=outW; c.height=outH;
-  const ctx=c.getContext("2d");
-  ctx.drawImage(v,0,0,outW,outH);
-
+  c.getContext("2d").drawImage(v,0,0,outW,outH);
   return c.toDataURL("image/jpeg",0.35);
 }
 
@@ -288,21 +239,16 @@ window.shotAndSend=async()=>{
     vibrate([60,60,60]);
     toast("返却を記録","確認待ち");
     await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
+  }catch(e){ toast("通信エラー",""); }
 };
 
 window.confirmOk=async()=>{
-  if(!tool){ toast("エラー","toolが指定されていません"); return; }
   try{
     await postAction_("確認");
     vibrate(80);
     toast("確認を記録","");
     await refresh();
-  }catch(e){
-    toast("通信エラー","記録できていません");
-  }
+  }catch(e){ toast("通信エラー",""); }
 };
 
 async function refresh(){
@@ -311,13 +257,12 @@ async function refresh(){
     ui(items);
   }catch(e){
     ui([]);
-    toast("通信エラー","状態を取得できません");
+    toast("通信エラー","状態取得失敗");
   }
 }
 
 function render(){
   header();
-  if(!getUser()){ showUserSelect(); return; }
   refresh();
   setInterval(refresh, 15000);
 }
