--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@ header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
+
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
-.small{font-size:14px;padding:10px}
-.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+
 .list .item{border:1px solid #333;border-radius:12px;padding:12px;margin-top:10px}
-.item b{display:block;font-size:16px}
+.item b{font-size:16px}
 .item .meta{opacity:.7;font-size:13px;margin-top:6px}
-video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
+
+.state-out{border-color:#c44;background:#221}
+.state-pending{border-color:#cc4;background:#222}
+.state-in{border-color:#444}
+
+.toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
+video{width:100%;border-radius:12px;border:1px solid #333}
 .hidden{display:none}
-.stateOut{border-color:#a33}
-.statePending{border-color:#aa3}
-.stateIn{border-color:#333}
 </style>
 </head>
 <body>
@@ -28,186 +31,135 @@ video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 <main id="app"></main>
 
 <script>
-/* ===== 設定 ===== */
 const GAS_URL="https://script.google.com/macros/s/AKfycbzgupJn0DPxP6AY-Ocr-Nw3Pt9cSbpRIr3ZMZxYH3R1z9-ydLUhepZwU51WRQB5bLG_Lw/exec";
 
 const TOOL_NAME={
   T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
-  T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
+  T004:"誘導棒"
 };
 
-/* ===== 利用者名（通常画面のみ使用）===== */
-let CURRENT_USER = localStorage.getItem("toolcheck_user");
+const STATUS_JP={
+  OUT:"持ち出し中",
+  PENDING:"返却待ち",
+  IN:"返却済"
+};
+
+let CURRENT_USER = localStorage.getItem("tool_user");
 if(!CURRENT_USER){
-  const v = prompt("名前を入力してください");
-  CURRENT_USER = (v && v.trim()) ? v.trim() : "未入力";
-  localStorage.setItem("toolcheck_user", CURRENT_USER);
+  CURRENT_USER=prompt("名前を入力してください")||"未入力";
+  localStorage.setItem("tool_user",CURRENT_USER);
 }
 
-/* ===== URL ===== */
 const p=new URLSearchParams(location.search);
-const site=(p.get("site")||"").trim() || "A";
-const tool=(p.get("tool")||"").trim();
+const site=p.get("site")||"A";
+const tool=p.get("tool")||"";
 const toolName=TOOL_NAME[tool]||"不明";
-const IS_CHECKER = (p.get("role")||"") === "checker";
+const IS_CHECKER=p.get("role")==="checker";
 
-/* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
 
-function toast(a,b="",ms=2200){
-  const d=document.createElement("div");
-  d.className="toast";
-  d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
-  document.body.appendChild(d);
-  setTimeout(()=>d.remove(),ms);
-}
+function toast(t){const d=document.createElement("div");d.className="toast";d.textContent=t;document.body.appendChild(d);setTimeout(()=>d.remove(),1800)}
 
-/* ===== JSONP ===== */
-function jsonp_(url){
-  return new Promise((resolve,reject)=>{
-    const cb="cb_"+Math.random().toString(36).slice(2);
-    window[cb]=(d)=>{ delete window[cb]; s.remove(); resolve(d); };
+function jsonp(url){
+  return new Promise(ok=>{
+    const cb="cb"+Math.random();
+    window[cb]=d=>{delete window[cb];s.remove();ok(d)};
     const s=document.createElement("script");
-    s.onerror=()=>{ delete window[cb]; reject(); };
-    s.src=url+(url.includes("?")?"&":"?")+"callback="+cb+"&t="+Date.now();
+    s.src=url+"&callback="+cb;
     document.body.appendChild(s);
   });
 }
 
 async function getStatus(){
-  const js = await jsonp_(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`);
-  if(js.result!=="ok") throw new Error();
-  return js.items||[];
+  const r=await jsonp(`${GAS_URL}?mode=status&site=${site}`);
+  return r.items||[];
 }
 
-/* ===== POST ===== */
-function postAction(action, photoDataUrl){
+function post(action,photo){
   const f=document.createElement("form");
-  f.method="POST"; f.action=GAS_URL; f.target="hidden";
-  f.style.display="none";
-  const payload={
-    datetime:new Date().toISOString(),
-    site, tool, toolName,
-    action,
-    user: CURRENT_USER
-  };
-  if(photoDataUrl) payload.photoDataUrl=photoDataUrl;
-  for(const k in payload){
-    const i=document.createElement("input");
-    i.name=k; i.value=payload[k];
-    f.appendChild(i);
-  }
-  document.body.appendChild(f);
-  f.submit();
-  f.remove();
+  f.method="POST";f.action=GAS_URL;f.target="x";
+  f.innerHTML=`
+    <input name="site" value="${site}">
+    <input name="tool" value="${tool}">
+    <input name="toolName" value="${toolName}">
+    <input name="action" value="${action}">
+    <input name="user" value="${CURRENT_USER}">
+    ${photo?`<input name="photoDataUrl" value="${photo}">`:""}
+  `;
+  document.body.appendChild(f);f.submit();f.remove();
 }
 
 function header(){
-  hdr.textContent = IS_CHECKER
-    ? `確認者画面｜現場：${site}`
-    : `現場：${site}　道具：${toolName}　端末：${CURRENT_USER}`;
+  hdr.textContent=IS_CHECKER
+    ? `確認者画面｜${site}`
+    : `現場:${site} 道具:${toolName} 端末:${CURRENT_USER}`;
 }
 
-/* ===== UI ===== */
+function renderList(items){
+  return items.map(x=>{
+    const cls=x.status==="OUT"?"state-out":x.status==="PENDING"?"state-pending":"state-in";
+    return `
+      <div class="item ${cls}">
+        <b>${x.toolName}</b>
+        <div class="meta">${STATUS_JP[x.status]} / ${x.by||""}</div>
+      </div>`;
+  }).join("");
+}
+
 function renderNormal(items){
-  const me = items.find(x=>x.tool===tool);
-  const statusText = !me ? "持ち出し無し"
-    : me.status==="OUT" ? "持ち出し中"
-    : me.status==="PENDING" ? "返却確認待ち"
-    : "持ち出し無し";
-
+  const me=items.find(x=>x.tool===tool);
   app.innerHTML=`
-    <div class="card">
-      <h2>状態</h2>
-      <div style="font-size:20px">${statusText}</div>
-    </div>
-
+    <div class="card"><h2>状態</h2>${me?STATUS_JP[me.status]:"持ち出し無し"}</div>
     <div class="card">
       <button onclick="take()">持ち出し</button>
-      <button onclick="startReturn()">返却（写真必須）</button>
+      <button onclick="openCam()">返却（写真必須）</button>
       <div id="cam" class="hidden">
         <video id="v" autoplay playsinline></video>
         <button onclick="shot()">撮影して返却</button>
       </div>
     </div>
-
-    <div class="card">
-      <h2>履歴一覧</h2>
-      ${renderList(items)}
-    </div>
+    <div class="card"><h2>履歴一覧</h2>${renderList(items)}</div>
   `;
 }
 
 function renderChecker(items){
-  const pend = items.filter(x=>x.status==="PENDING");
-  if(pend.length===0){
-    app.innerHTML=`<div class="card"><b>確認待ちなし</b></div>`;
-    return;
-  }
-  app.innerHTML = `
+  const targets=items.filter(x=>x.status!=="IN");
+  if(!targets.length){app.innerHTML="<div class='card'>持ち出し無し</div>";return;}
+  app.innerHTML=`
     <div class="card">
-      <h2>返却確認</h2>
-      ${pend.map(x=>`
-        <div class="item statePending">
+      <h2>確認待ち</h2>
+      ${targets.map(x=>`
+        <div class="item state-pending">
           <b>${x.toolName}</b>
-          <div class="meta">${x.by} / ${new Date(x.at).toLocaleString()}</div>
-          <button class="small" onclick="openPhoto('${x.photoUrl}')">写真を見る</button>
+          <div class="meta">${STATUS_JP[x.status]} / ${x.by}</div>
           <button onclick="confirm('${x.tool}','${x.toolName}')">確認</button>
-        </div>
-      `).join("")}
-    </div>
-  `;
+        </div>`).join("")}
+    </div>`;
 }
 
-function renderList(items){
-  if(items.length===0) return `<div class="item">履歴なし</div>`;
-  return `<div class="list">`+items.map(x=>`
-    <div class="item">
-      <b>${x.toolName}</b>
-      <div class="meta">${x.status} / ${x.by||""}</div>
-    </div>
-  `).join("")+`</div>`;
-}
-
-/* ===== 操作 ===== */
-function take(){ postAction("持ち出し"); toast("持ち出し記録"); refresh(); }
-function startReturn(){
-  navigator.mediaDevices.getUserMedia({video:true}).then(s=>{
-    v.srcObject=s; cam.classList.remove("hidden"); stream=s;
-  });
-}
+function take(){post("持ち出し");toast("持ち出し記録");refresh()}
 let stream;
+function openCam(){
+  navigator.mediaDevices.getUserMedia({video:{facingMode:{exact:"environment"}}})
+    .then(s=>{stream=s;v.srcObject=s;cam.classList.remove("hidden")});
+}
 function shot(){
-  const c=document.createElement("canvas");
-  c.width=640; c.height=480;
+  const c=document.createElement("canvas");c.width=640;c.height=480;
   c.getContext("2d").drawImage(v,0,0,640,480);
-  const d=c.toDataURL("image/jpeg",0.4);
   stream.getTracks().forEach(t=>t.stop());
-  postAction("返却",d);
-  toast("返却記録");
-  refresh();
+  post("返却",c.toDataURL("image/jpeg",0.5));
+  toast("返却記録");refresh();
 }
-function confirm(tid,tname){
-  tool=tid; toolName=tname;
-  postAction("確認");
-  toast("確認完了");
-  refresh();
-}
-function openPhoto(u){ window.open(u); }
+function confirm(t,n){tool=t;toolName=n;post("確認");toast("確認完了");refresh()}
 
 async function refresh(){
-  try{
-    const items = await getStatus();
-    IS_CHECKER ? renderChecker(items) : renderNormal(items);
-  }catch(e){
-    toast("取得失敗");
-  }
+  const items=await getStatus();
+  IS_CHECKER?renderChecker(items):renderNormal(items);
 }
 
-header();
-refresh();
+header();refresh();
 </script>
-<iframe name="hidden" style="display:none"></iframe>
+<iframe name="x" style="display:none"></iframe>
 </body>
 </html>
