--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ header{padding:10px 12px;border-bottom:1px solid #333;color:#bbb;font-size:14px}
 main{padding:14px;max-width:560px;margin:auto}
 .card{border:1px solid #333;border-radius:12px;padding:14px;margin-bottom:12px}
 h2{margin:0 0 8px 0;font-size:18px}
+.badge{display:inline-block;border:1px solid #333;border-radius:999px;padding:2px 8px;font-size:12px;color:#bbb;margin-left:6px}
 button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px;background:#1a1a1a;color:#fff;border:1px solid #333}
 .small{font-size:14px;padding:10px}
 .toast{position:fixed;top:40%;left:50%;transform:translate(-50%,-50%);background:#000;border:1px solid #333;padding:18px 22px;border-radius:12px;text-align:center;z-index:9999}
@@ -18,13 +19,14 @@ button{width:100%;padding:14px;margin-top:10px;font-size:18px;border-radius:12px
 .item .meta{opacity:.7;font-size:13px;margin-top:6px}
 video{width:100%;border-radius:12px;border:1px solid #333;background:#000}
 .hidden{display:none}
+.stateOut{border-color:#a33}
 .statePending{border-color:#aa3}
+.stateIn{border-color:#333}
 </style>
 </head>
 <body>
 <header id="hdr"></header>
 <main id="app"></main>
-<iframe name="hidden" style="display:none"></iframe>
 
 <script>
 /* ===== 設定 ===== */
@@ -34,8 +36,10 @@ const TOOL_NAME={
   T001:"手歯止め",T002:"デジタルゲージ",T003:"検測用具",
   T004:"誘導棒",D001:"その他（扉1）",D002:"その他（扉2）",D003:"その他（扉3）"
 };
+// 残すが使わない（互換用）
+const MEMBERS=["佐藤","山田","高橋"];
 
-/* ===== 名前（通常画面用）===== */
+/* ===== 利用者名（自由入力・端末保存）===== */
 let CURRENT_USER = localStorage.getItem("toolcheck_user");
 if(!CURRENT_USER){
   const v = prompt("名前を入力してください");
@@ -48,109 +52,221 @@ const p=new URLSearchParams(location.search);
 const site=(p.get("site")||"").trim() || "A";
 const tool=(p.get("tool")||"").trim();
 const toolName=TOOL_NAME[tool]||"不明";
-const IS_CHECKER = (p.get("role")||"") === "checker";
 
-/* ===== DOM ===== */
+/* ===== 共通 ===== */
 const app=document.getElementById("app");
 const hdr=document.getElementById("hdr");
 
-/* ===== util ===== */
-function toast(a,b="",ms=2000){
+function toast(a,b="",ms=2200){
   const d=document.createElement("div");
   d.className="toast";
   d.innerHTML=`<div style="font-size:20px">${a}</div><div style="opacity:.7;font-size:14px;margin-top:6px">${b}</div>`;
   document.body.appendChild(d);
   setTimeout(()=>d.remove(),ms);
 }
+function vibrate(ms){ try{ if (navigator.vibrate) navigator.vibrate(ms); }catch(_){} }
 
-/* ===== JSONP ===== */
-function jsonp_(url){
+/* ===== status: JSONP ===== */
+function jsonp_(url, timeoutMs=8000){
   return new Promise((resolve,reject)=>{
     const cb="cb_"+Math.random().toString(36).slice(2);
-    window[cb]=(d)=>{ delete window[cb]; s.remove(); resolve(d); };
     const s=document.createElement("script");
-    s.onerror=()=>{ delete window[cb]; reject(); };
-    s.src=url+(url.includes("?")?"&":"?")+"callback="+cb+"&t="+Date.now();
+    const t=setTimeout(()=>{ cleanup(); reject(new Error("timeout")); }, timeoutMs);
+    function cleanup(){
+      clearTimeout(t);
+      try{ delete window[cb]; }catch(_){ window[cb]=undefined; }
+      if (s.parentNode) s.parentNode.removeChild(s);
+    }
+    window[cb]=(data)=>{ cleanup(); resolve(data); };
+    s.onerror=()=>{ cleanup(); reject(new Error("load error")); };
+    s.src = url + (url.includes("?") ? "&" : "?") + "callback=" + encodeURIComponent(cb) + "&t=" + Date.now();
     document.body.appendChild(s);
   });
 }
+
 async function getStatus(){
-  const js = await jsonp_(`${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`);
-  if(js.result!=="ok") throw new Error();
-  return js.items||[];
+  const url = `${GAS_URL}?mode=status&site=${encodeURIComponent(site)}`;
+  const js = await jsonp_(url);
+  if(js.result!=="ok") throw new Error("status error");
+  return js.items || [];
 }
 
-/* ===== POST（共通）===== */
-function postAction(payload){
+/* ===== 記録: hidden form POST ===== */
+let postFrameInited=false;
+function ensurePostFrame_(){
+  if(postFrameInited) return;
+  const ifr=document.createElement("iframe");
+  ifr.name="postFrame";
+  ifr.style.display="none";
+  document.body.appendChild(ifr);
+  postFrameInited=true;
+}
+function formPost_(payload){
+  ensurePostFrame_();
   const f=document.createElement("form");
-  f.method="POST"; f.action=GAS_URL; f.target="hidden";
-  f.style.display="none";
-  for(const k in payload){
+  f.method="POST"; f.action=GAS_URL; f.target="postFrame"; f.style.display="none";
+  for(const k of Object.keys(payload)){
     const i=document.createElement("input");
-    i.name=k; i.value=payload[k];
+    i.type="hidden"; i.name=k; i.value=String(payload[k]);
     f.appendChild(i);
   }
   document.body.appendChild(f);
   f.submit(); f.remove();
+  return true;
+}
+async function postAction_(action, photoDataUrl=""){
+  const payload={
+    datetime:new Date().toISOString(),
+    site, tool, toolName,
+    action,
+    user: CURRENT_USER
+  };
+  if(photoDataUrl) payload.photoDataUrl = photoDataUrl;
+  formPost_(payload);
+  await new Promise(r=>setTimeout(r,500));
 }
 
-/* ===== header ===== */
-hdr.textContent = IS_CHECKER
-  ? `確認者画面｜現場：${site}`
-  : `現場：${site}　道具：${toolName}　端末：${CURRENT_USER}`;
+/* ===== カメラ ===== */
+let stream=null;
 
-/* ===== UI ===== */
-function renderNormal(items){
-  app.innerHTML=`<div class="card"><h2>通常画面</h2></div>`;
+function header(){
+  hdr.textContent = `現場：${site}　道具：${toolName}（${tool||"未指定"}）　端末：${CURRENT_USER}`;
 }
 
-function renderChecker(items){
-  const pend = items.filter(x=>x.status==="PENDING");
-  if(pend.length===0){
-    app.innerHTML=`<div class="card"><b>確認待ちなし</b></div>`;
-    return;
-  }
+function ui(statusItems){
+  const byTool = {};
+  for(const it of statusItems){ byTool[it.tool]=it; }
+  const me = byTool[tool];
+
+  const statusText = !tool ? "" : (
+    !me ? "持ち出し無し" :
+    me.status==="OUT" ? `${me.toolName} を持ち出し中` :
+    me.status==="PENDING" ? `${me.toolName} 返却確認待ち` :
+    "持ち出し無し"
+  );
+
+  const needConfirm = me && me.status==="PENDING";
+  const photoUrl = (me && me.photoUrl) ? me.photoUrl : "";
+
   app.innerHTML=`
+    <div class="card ${needConfirm?'statePending': (me && me.status==='OUT'?'stateOut':'stateIn')}">
+      <h2>状態</h2>
+      <div style="font-size:20px">${statusText}</div>
+      ${needConfirm ? `<div style="opacity:.8;margin-top:8px">写真を確認してから「確認」を押す</div>` : ``}
+      ${photoUrl ? `<button class="small" onclick="openPhoto('${photoUrl.replace(/'/g,"%27")}')">写真を見る</button>` : ``}
+      ${needConfirm ? `<button onclick="confirmOk()">確認</button>` : ``}
+    </div>
+
     <div class="card">
-      <h2>返却確認</h2>
-      ${pend.map(x=>`
-        <div class="item statePending">
-          <b>${x.toolName}</b>
-          <div class="meta">${x.by} / ${new Date(x.at).toLocaleString()}</div>
-          <button class="small" onclick="openPhoto('${x.photoUrl}')">写真を見る</button>
-          <button onclick="confirmChecker('${x.tool}','${x.toolName}')">確認</button>
-        </div>
-      `).join("")}
+      <h2>${toolName}</h2>
+      <button onclick="take()">持ち出し</button>
+      <button onclick="startReturn()">返却（写真必須）</button>
+
+      <div id="cam" class="card hidden" style="margin-top:12px">
+        <video id="v" autoplay playsinline></video>
+        <button onclick="shotAndSend()">撮影して返却</button>
+        <button class="small" onclick="cancelCam()">中止</button>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>履歴一覧</h2>
+      ${renderList(statusItems)}
     </div>
   `;
 }
 
-/* ===== 確認者用 確認 ===== */
-function confirmChecker(tid, tname){
-  postAction({
-    datetime:new Date().toISOString(),
-    site,
-    tool: tid,
-    toolName: tname,
-    action:"確認",
-    user: CURRENT_USER
-  });
-  toast("確認完了");
-  refresh();
+function renderList(items){
+  const active = items.filter(x=>x.status==="OUT"||x.status==="PENDING");
+  if(active.length===0){
+    return `<div class="item"><b>持ち出し無し</b><div class="meta">現在の持ち出しはありません</div></div>`;
+  }
+  return `<div class="list">` + active.map(x=>{
+    const label = (x.status==="OUT") ? "持ち出し中" : "返却確認待ち";
+    const t = x.at ? new Date(x.at).toLocaleString() : "";
+    return `
+      <div class="item ${x.status==="OUT"?'stateOut':'statePending'}">
+        <b>${x.toolName}（${x.tool}）</b>
+        <div class="meta">${label} / ${x.by||""} / ${t}</div>
+      </div>
+    `;
+  }).join("") + `</div>`;
 }
 
-function openPhoto(u){ window.open(u); }
+window.openPhoto=(u)=>{ window.open(u, "_blank"); };
+
+window.take=async()=>{
+  try{
+    await postAction_("持ち出し");
+    vibrate(80);
+    toast("持ち出しを記録","");
+    await refresh();
+  }catch(e){ toast("通信エラー",""); }
+};
+
+window.startReturn=async()=>{
+  try{
+    const cam=document.getElementById("cam");
+    cam.classList.remove("hidden");
+    const v=document.getElementById("v");
+    stream = await navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}});
+    v.srcObject = stream;
+  }catch(e){ toast("カメラ起動できない",""); }
+};
+
+window.cancelCam=()=>{
+  try{ if(stream) stream.getTracks().forEach(t=>t.stop()); }catch(_){}
+  const cam=document.getElementById("cam");
+  if(cam) cam.classList.add("hidden");
+};
+
+async function captureJpegDataUrl_(){
+  const v=document.getElementById("v");
+  await new Promise(r=>setTimeout(r,150));
+  const srcW=v.videoWidth||1280, srcH=v.videoHeight||720;
+  const outW=640, outH=Math.round(outW * srcH / srcW);
+  const c=document.createElement("canvas");
+  c.width=outW; c.height=outH;
+  c.getContext("2d").drawImage(v,0,0,outW,outH);
+  return c.toDataURL("image/jpeg",0.35);
+}
+
+window.shotAndSend=async()=>{
+  try{
+    const dataUrl = await captureJpegDataUrl_();
+    cancelCam();
+    await postAction_("返却", dataUrl);
+    vibrate([60,60,60]);
+    toast("返却を記録","確認待ち");
+    await refresh();
+  }catch(e){ toast("通信エラー",""); }
+};
+
+window.confirmOk=async()=>{
+  try{
+    await postAction_("確認");
+    vibrate(80);
+    toast("確認を記録","");
+    await refresh();
+  }catch(e){ toast("通信エラー",""); }
+};
 
 async function refresh(){
   try{
     const items = await getStatus();
-    IS_CHECKER ? renderChecker(items) : renderNormal(items);
+    ui(items);
   }catch(e){
-    toast("取得失敗");
+    ui([]);
+    toast("通信エラー","状態取得失敗");
   }
 }
 
-refresh();
+function render(){
+  header();
+  refresh();
+  setInterval(refresh, 15000);
+}
+render();
 </script>
 </body>
 </html>
